--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,7 +26,7 @@ dependencies:
 
   #firebase
   google_mobile_ads: ^3.0.0
-  firebase_core: ^2.13.0
+  firebase_core: ^2.12.0
   firebase_analytics: ^10.4.1
   firebase_crashlytics: ^3.3.1
 
@@ -38,6 +38,7 @@ dependencies:
   animated_digit: ^3.2.1
   animated_flip_counter: ^0.2.5
   vibration: ^1.7.5
+  just_audio: ^0.9.34
 
 dev_dependencies:
   flutter_test:
@@ -57,9 +58,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/sound/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
