--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,9 @@ dependencies:
   vibration: ^1.7.5
   just_audio: ^0.9.34
 
+  #animation
+  flutter_bounce: ^1.1.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
